Bug 114875 - [Mac] ComplexTextController is slow with large numbers of text runs.
Summary: [Mac] ComplexTextController is slow with large numbers of text runs.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Text (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andreas Kling
URL:
Keywords: InRadar, Performance
Depends on:
Blocks:
 
Reported: 2013-04-19 07:33 PDT by Andreas Kling
Modified: 2013-04-19 09:16 PDT (History)
3 users (show)

See Also:


Attachments
Proposed patch (3.30 KB, patch)
2013-04-19 08:26 PDT, Andreas Kling
mitz: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kling 2013-04-19 07:33:01 PDT
<rdar://problem/13337036>

For content with long spans of complex text, we sometimes get stuck in ComplexTextController::indexOfCurrentRun() for a while, specifically in the loop that finds the leftmost glyph at the end.
Comment 1 Andreas Kling 2013-04-19 08:26:15 PDT
Created attachment 198856 [details]
Proposed patch
Comment 2 Andreas Kling 2013-04-19 09:16:35 PDT
Committed r148750: <http://trac.webkit.org/changeset/148750>